[package]
name = "iron-vault"
version = "0.2.0"
authors = ["Lachy Hislop <lachie.hislop@gmail.com>"]
edition = "2021"
description = "A redis style in-memory unified storage written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lenard-0/Iron-Vault"
readme = "README.md"
homepage = "https://github.com/Lenard-0/Iron-Vaultt"
documentation = "https://docs.rs/iron-vault"

# Specify the library
[lib]
name = "iron_vault"
path = "src/lib.rs"

# Specify the binary
[[bin]]
name = "iron-vault"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"